<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/C203"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MondayModule" />

    <TextView
        android:id="@+id/C346"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TuesdayModule" />

    <TextView
        android:id="@+id/C235"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/WednesdayModule" />

    <TextView
        android:id="@+id/C206"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ThursdayModule" />

    <TextView
        android:id="@+id/C218"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FridayModule" />

</LinearLayout>